<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TrainingFirstApp</string>
    <string name="action_contact">Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">取消</string>
    <string name="title">标题</string>
    <string name="center">个人电脑</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="search">Search</string>
    <string name="acc_auto_install_service_name">第一个App自动安装apk</string>
    <string name="acc_auto_install_service_description">我是你唯一的选择，你只有选择了我，才会到达你爱的世界</string>
    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>
    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
    <string name="activity_a_label">Activity A</string>
    <string name="activity_b_label">Activity B</string>
    <string name="activity_c_label">Activity C</string>
    <string name="btn_start_a_label">Start A</string>
    <string name="btn_start_b_label">Start B</string>
    <string name="btn_start_c_label">Start C</string>
    <string name="btn_start_dialog_label">Dialog</string>
    <string name="btn_finish_a_label">Finish A</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_finish_c_label">Finish C</string>
    <string name="btn_finish_dialog_label">Close</string>
    <string name="on_activity_created">onActivityCreated</string>
    <string name="on_attach">onAttach</string>
    <string name="on_create_view">onCreateView</string>
    <string name="on_destroy_view">onDestroyView</string>
    <string name="on_detach">onDetach</string>
    <string name="on_view_created">onViewCreated</string>
    <string name="activity_a">Activity A</string>
    <string name="start_a">Start A</string>
    <string name="start_b">Start B</string>
    <string name="start_c">Start C</string>
    <string name="close">Close</string>
    <string name="dialog">Dialog</string>
    <string name="picture_processing">picture processing</string>
    <string name="intent_test">将电话号传入拨号程序</string>
    <string name="map">map</string>
    <string name="web">webView</string>
    <string name="email">email</string>
    <string name="sharebutton">ShareButton</string>
    <string name="opennew">OpenNewActivityBtn</string>
    <string name="hellowShuaiYang">hellow Shuai Yang</string>
    <string name="other_app_name">第一个APP\n欢迎使用</string>
    <string name="file_selector">File Selector</string>
    <string name="open_swipe_demo">OpenSwipeMenuDemo</string>
    <string name="take_photo_s">TakePhoto_压缩</string>
    <string name="take_photo_demo">TakePhotoDemo</string>
    <string name="take_photo_o">TakePhoto_原图</string>
    <string name="imitate_ccb_menu">仿建行原形菜单</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="yangshuai">杨帅</string>
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="card_back_title">Shuai Yang Android</string>
    <string name="card_back_description"><![CDATA[AAA啊哈的描述]]></string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fragment">Fragment</string>
    <string name="my_anim">my anim</string>
    <string name="activity_life">Activity生命周期</string>
    <string name="img_anim_more">图像与动画相关</string>
    <string name="net_work_demo">NetworkActivityDemo</string>
    <string name="down_load">下载测试</string>
    <string name="open_youxi_client">唤起有戏客户端</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="INSTALL">INSTALL</string>
    <string name="Install">Install</string>
    <string name="install">安装</string>
    <string name="installing">Installing…</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="contacts">contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="pop_name">please write your name~</string>
    <string name="pop_email">please input your email</string>
    <string name="pop_phone">please input your phone</string>
    <string name="confirm">OK</string>
    <string name="cancle">NO</string>
    <string name="contact_detail">Contact detail</string>
    <string name="edit_contact">EditContact</string>
    <string name="edit">Edit</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="effective_navigation">EffectiveNavigation</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="notification">Notification</string>
    <string name="ping">Ping!</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">10</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>
    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
    <string name="news_reader">News Reader</string>
    <string name="reset_button">Reset</string>
    <string name="cusstom_chart">Chart CusstomView</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_videos">Videos</string>
    <string name="flash_view">闪瞎眼睛的可拖拽view</string>
    <string name="slide_menu">侧滑菜单的简易实现</string>
    <string name="clock_s">秒表</string>
    <string name="handle_img">图片处理</string>
    <string name="btn_is_shown_bottom">scroll to bottom</string>
    <string name="reset">reset</string>
    <string name="commont_anim">Commont Anim</string>
    <string name="anim_development">anim_development</string>
    <string name="hi_my_life">hello, my baby</string>
    <string name="just_support">Preview only support Android 5.0 and higher API system</string>
    <string name="call_phone">call phone</string>
    <string name="dialer">Dialer</string>
    <string name="see_contacts">see contacts</string>
    <string name="show_settings">show settings</string>
    <string name="show_wifi_setting">show wifi setting</string>
    <string name="dialog_activity">dialog activity</string>
    <string name="monitoring_sms">Monitoring sms</string>
    <string name="monitoring_call">Monitoring call</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="alert">alert</string>
    <string name="running_in_Emualtor">running in emualtor</string>
    <string name="bessel_path">贝塞尔曲线</string>
    <string name="interactive">表格联动多点触摸</string>
    <string name="snackbar">Snackbar</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="add_new_website">Add New Website</string>
    <string name="add_new_website_short">Add Website</string>
    <string name="remove_shortcut">Remove</string>
    <string name="disable_shortcut">Disable</string>
    <string name="enable_shortcut">Enable</string>
    <string name="existing_shortcuts">Existing shortcuts:</string>
    <string name="shortcuts_manager">Shortcuts Manager</string>
    <string name="click_again_to_exit">Click again to exit!</string>
</resources>